syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.grpc.smartAutoGraderService";
option java_outer_classname = "SmartAutoGraderServiceImpl";

package SmartAutoGraderService;

// The service definition.
// The server that you implement must extend the class  <servicename>ImplBase


// AutoGraderService (Server Streaming)
service SmartAutoGraderService{
    rpc GradeSubmission (GradeRequest) returns (stream GradeResponse) {}
}



//  message identifying a GradeRequest
message GradeRequest {
    string student_id = 1; // Unique submission identifier
    string content = 2;       // Text content
    string rubric = 3;        // Grading rubric
}

// The gradeResponse message containing answer from the server
message GradeResponse {
    string student_id = 1;
    string content = 2;
    string course = 3;
    float score = 4;          // Incremental or final score
    string feedback = 5;      // Feedback for a section or overall
    bool is_complete = 6;     // Indicates grading completion
}

